small fixes to uk trans

--- a/translations/uk/info/task_description.html
+++ b/translations/uk/info/task_description.html
@@ -1,9 +1,9 @@
 <p>
     В галузі інформаційних технологій, черга це динамічна структура даних, що працює за принципом
-    «перший прийшов — перший пішов» (англ. FIFO — first in, first out), в якій елементи колекції зберігаються
+    "перший прийшов — перший пішов" (англ. FIFO — first in, first out), в якій елементи колекції зберігаються
     упорядкованими, а основними операціями є додавання в чергу та видалення з черги. У черги є голова (англ. head) та
-    хвіст (англ. tail). Додавання можливе тільки в "хвіст" черги (enqueue - "поставити в чергу" чи push), видалення
-    з черги (або вибірка елементу) можливе лише з "голови" черги (dequeue - "отримання з черги" чи pop).
+    хвіст (англ. tail). Додавання можливе тільки в "хвіст" черги (enqueue — "поставити в чергу" чи push), видалення
+    з черги (або вибірка елементу) можливе лише з "голови" черги (dequeue — "отримання з черги" чи pop).
     Тобто, для того, щоб отримати новий елемент із черги, потрібно видалити всі попередні елементі, які були додані до
     черги.
 </p>
