--- a/translations/uk/info/task_description.html
+++ b/translations/uk/info/task_description.html
@@ -14,14 +14,17 @@
     - "POP" -- отримати з голови черги елемент. Якщо черга порожня, то не виконувати ніяких дій.<br>
     Черга може містити лише літери.
 </p>
+
 <p>
     Вам потрібно опрацювати всі команди та зібрати літери, що залишилися в черзі, в одне слово від початку до кінця
     черги.
 </p>
+
 <p>
     Давайте розглянемо на прикладі, ось послідовність команд:<br>
     ["PUSH A", "POP", "POP", "PUSH Z", "PUSH D", "PUSH O", "POP", "PUSH T"]
 </p>
+
 <style>
     #example-table {
         border-collapse: collapse;
@@ -36,6 +39,7 @@
         text-align: center;
     }
 </style>
+
 <table id="example-table">
     <tr>
         <th>Команда</th>
@@ -92,18 +96,24 @@
     <strong>Вихідні дані: </strong> Залишок в черзі як рядок (string).
 </p>
 
-
-<div class="for_info_only">
-    <p>
-        <strong>Приклади:</strong>
-    </p>
-    <pre class="brush: python">
+<p class="for_info_only">
+    <strong>Приклад:</strong>
+    {% if interpreter.slug == "js-node" %}
+<pre class="brush: python">
+letterQueue(["PUSH A", "POP", "POP", "PUSH Z", "PUSH D", "PUSH O", "POP", "PUSH T"]) == "DOT"
+letterQueue(["POP", "POP"]) == ""
+letterQueue(["PUSH H", "PUSH I"]) == "HI"
+letterQueue([]) == ""
+</pre>
+    {% else %}
+<pre class="brush: python">
 letter_queue(["PUSH A", "POP", "POP", "PUSH Z", "PUSH D", "PUSH O", "POP", "PUSH T"]) == "DOT"
 letter_queue(["POP", "POP"]) == ""
 letter_queue(["PUSH H", "PUSH I"]) == "HI"
 letter_queue([]) == ""
-    </pre>
-</div>
+</pre>
+    {% endif %}
+</p>
 
 <p class="for_info_only">
     <strong>Як це використовується: </strong>
