tryit panel update;

--- a/editor/templates.html
+++ b/editor/templates.html
@@ -19,14 +19,14 @@
         <table class="tool">
             <tr>
                 <td>
-                    <input type="text" value="test">
+                    <input type="text" size="30" value="test" class="tryit_text_input">
                 </td>
                 <td>
                     <button class="bn-check btn">Action</button>
                 </td>
             </tr>
             <tr>
-                <td colspan="2" class="checkio-result">
+                <td colspan="2" class="checkio_result">
                 </td>
             </tr>
 
