--- a/editor/templates.html
+++ b/editor/templates.html
@@ -17,9 +17,10 @@
 <script type="text/template" id="template_tryit">
     <div class="tryit-content center-exp">
         <table class="tool">
+            <tr><td colspan="2"><center>Commands in Queue separated by comas</center></td></tr>
             <tr>
                 <td>
-                    <input type="text" size="30" value="test" class="tryit_text_input">
+                    <input type="text" size="30" value="POP,POP" class="tryit_text_input">
                 </td>
                 <td>
                     <button class="bn-check btn">Action</button>
