--- a/translations/fr/info/task_description.html
+++ b/translations/fr/info/task_description.html
@@ -91,42 +91,16 @@
 </table>
 
 <p>
-    <strong>Input: </strong> Une suite de commandes, comme liste (list) de chaîne de caractères (str).
+    <strong>Input:</strong> Une suite de commandes, comme liste (list) de chaîne de caractères (str).
 </p>
 
 <p>
-    <strong>Output: </strong> La file après les opérations, comme chaîne de caractères (str).
+    <strong>Output:</strong> La file après les opérations, comme chaîne de caractères (str).
 </p>
 
 <p class="for_info_only">
     <strong>Exemple:</strong>
-    {% if interpreter.slug == "js-node" %}
-<pre class="brush: javascript">letterQueue(['PUSH A',
- 'POP',
- 'POP',
- 'PUSH Z',
- 'PUSH D',
- 'PUSH O',
- 'POP',
- 'PUSH T']) == 'DOT'
-letterQueue(['POP', 'POP']) == ''
-letterQueue(['PUSH H', 'PUSH I']) == 'HI'
-letterQueue([]) == ''
-</pre>
-    {% else %}
-<pre class="brush: python">letter_queue(['PUSH A',
- 'POP',
- 'POP',
- 'PUSH Z',
- 'PUSH D',
- 'PUSH O',
- 'POP',
- 'PUSH T']) == 'DOT'
-letter_queue(['POP', 'POP']) == ''
-letter_queue(['PUSH H', 'PUSH I']) == 'HI'
-letter_queue([]) == ''
-</pre>
-    {% endif %}
+<pre class="brush: {% if is_js %}javascript{% else %}python{% endif %}">{{init_code_tmpl}}</pre>
 </p>
 
 <p class="for_info_only">
