--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,4 +1,4 @@
-<p>
+<p style="text-align: justify;">
     In computer science, a queue is a particular kind of data type in which the entities in the collection are kept in order and the principal operations on the collection are the addition of entities to the rear terminal position (enqueue or push), and removal of entities from the front terminal position (dequeue or pop). This makes the queue a First-In-First-Out (FIFO) data structure. In a FIFO data structure, the first element added to the queue will be the first one to be removed. This is equivalent to the requirement that once a new element is added, all elements that were added before have to be removed before the new element can be removed.
 </p>
 
@@ -103,6 +103,6 @@
 
 <p>
     <strong>Preconditions:</strong><br>
-    0 &le; len(<strong>commands</strong>) &le; 30;<br>
-    all(re.match("\APUSH [A-Z]\Z", c) or re.match("\APOP\Z", c) for c in <strong>commands</strong>)
+    0 &le; len(<b>commands</b>) &le; 30;<br>
+    all(re.match("\APUSH [A-Z]\Z", c) or re.match("\APOP\Z", c) for c in <b>commands</b>)
 </p>
